# bytehaul

./: .gitignore  Cargo.toml  LICENSE  README.md  bench-local.sh  experiment-results-30-live-aws.json  experiment-results-30-live-aws.tsv  experiment-results-ml-final.json  experiment-results-ml.json  experiment-results-realtools-final.json  experiment-results-round2.json  experiment-results-round3.json  experiment-results-round4.json  experiment-results.json
autoresearch/: analyze.py  bench-aws.sh  bench.sh  lab-notebook.md  program.md  results-aws.tsv  results.tsv
bench-aws/: experiments-round2.sh  experiments-round3.sh  experiments-round4.sh  experiments.sh  ml-scenarios.sh  real-tools.sh  run-v2.sh  run.sh  validate-perf.sh
bench-docker/: Dockerfile  docker-compose.yml  run-bench.sh
bytehaul-bench/: Cargo.toml
bytehaul-bench/src/: harness.rs  main.rs  report.rs  scenarios.rs
bytehaul-cli/: Cargo.toml
bytehaul-cli/scripts/: bytehaul-slurm-stage
bytehaul-cli/src/: bench.rs  clean.rs  completions.rs  daemon.rs  doctor.rs  gather.rs  init.rs  main.rs  output.rs  profiles.rs  pull.rs  send.rs  smart.rs  status.rs  sync_cmd.rs  watch.rs
bytehaul-cli/tests/: cli_workflows.rs
bytehaul-lib/: Cargo.toml
bytehaul-lib/src/: client.rs  config.rs  config_file.rs  lib.rs  server.rs
bytehaul-proto/: Cargo.toml
bytehaul-proto/src/: adaptive.rs  chunking.rs  compress.rs  congestion.rs  crypto.rs  delta.rs  engine.rs  fec.rs  filter.rs  lib.rs  manifest.rs  resume.rs  storage.rs  sync.rs  transport.rs  verify.rs  wire.rs
bytehaul-proto/tests/: control_state_fuzz.rs  integration.rs
bytehaul-python/: Cargo.toml  pyproject.toml
bytehaul-python/src/: lib.rs
deploy/k8s/: Dockerfile  entrypoint.sh
