[workspace]
members = [
    "bytehaul-proto",
    "bytehaul-cli",
    "bytehaul-lib",
    "bytehaul-bench",
    "bytehaul-python",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bytehaul/bytehaul"

[workspace.dependencies]
# Core
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.14"
blake3 = "1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = { version = "2", features = ["serde"] }
bitvec = "1"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
indicatif = "0.18"
console = "0.16"

# Logging / errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

# Config
toml = "1"

# Crypto
chacha20poly1305 = "0.10"

# Async
async-trait = "0.1"

# Compression
zstd = "0.13"

# File watching
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = "0.5"

# Cloud storage (feature-gated)
aws-config = { version = "1" }
aws-sdk-s3 = { version = "1" }

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Util
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
humansize = "2"
walkdir = "2"
globset = "0.4"

[workspace.lints.rust]
future-incompatible = "warn"
nonstandard_style = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
redundant_clone = { level = "warn", priority = 0 }
large_enum_variant = { level = "warn", priority = 0 }
needless_collect = { level = "warn", priority = 0 }
module_name_repetitions = { level = "allow", priority = 0 }
must_use_candidate = { level = "allow", priority = 0 }
missing_errors_doc = { level = "allow", priority = 0 }
missing_panics_doc = { level = "allow", priority = 0 }
return_self_not_must_use = { level = "allow", priority = 0 }
cast_possible_truncation = { level = "allow", priority = 0 }
cast_precision_loss = { level = "allow", priority = 0 }
cast_sign_loss = { level = "allow", priority = 0 }
cast_lossless = { level = "allow", priority = 0 }
