[package]
name = "bytehaul-proto"
description = "Core protocol implementation for ByteHaul file transfer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bitvec = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
chacha20poly1305 = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
anyhow = { workspace = true }
zstd = { workspace = true }
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }

[features]
default = []
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
