[package]
name = "bytehaul-python"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "bytehaul"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytehaul-lib = { path = "../bytehaul-lib" }
bytehaul-proto = { path = "../bytehaul-proto" }
pyo3 = { version = "0.22", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
